fix tag alignment

--- a/src/styles/components/tags.scss
+++ b/src/styles/components/tags.scss
@@ -6,9 +6,9 @@
     color: #404040;
     cursor: pointer;
     display: inline-block;
-    font-size: .8rem;
+    font-size: .75rem;
     line-height: 1;
-    margin: 0 .5rem .8rem 0;
+    margin: 0;
     padding: .5em 1em;
     text-align: center;
     transition: background-color .25s ease-out, color .25s ease-out;
